<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCitaFragment">


    <EditText
        android:id="@+id/et_cita_in_fecha"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/fecha"
        android:inputType="text"
        android:minEms="10"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/et_cita_in_hora"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/hora"
        android:inputType="time"
        android:minEms="10"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/et_cita_in_fecha"
        app:layout_constraintStart_toStartOf="@+id/et_cita_in_fecha"
        app:layout_constraintTop_toBottomOf="@+id/et_cita_in_fecha" />

    <EditText
        android:id="@+id/et_cita_in_descripcion"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/descripcion"
        android:inputType="text"
        android:minEms="10"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/et_cita_in_fecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_cita_in_fecha"
        app:layout_constraintTop_toBottomOf="@+id/et_cita_in_hora" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/thebold"
        android:text="@string/create_appointment"
        android:textColor="@color/gray"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cita_in_submit"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/agendar"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cita_in_descripcion" />

    <ImageView
        android:id="@+id/iv_qr_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/codigo_qr_si_desea_hacer_su_cita_en_su_clinica"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cita_in_submit" />
</androidx.constraintlayout.widget.ConstraintLayout>