<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <EditText
        android:id="@+id/user_edit_text"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/user_edit_text_hint"
        android:inputType="text"
        android:minEms="10"
        android:textColorHint="@color/gray"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="310dp"
        android:layout_height="50sp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/password_edit_text_hint"
        android:inputType="text"
        android:password="true"
        android:minEms="10"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/login_ingresar_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_ingresar_btn"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:layout_marginBottom="168dp"
        android:background="@drawable/button"
        android:text="@string/login_login_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/thebold"
        android:text="@string/welcome_text_view_message"
        android:textColor="@color/gray"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>