<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lorem_sh"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_genero"
            app:layout_constraintStart_toEndOf="@+id/tv_item_genero"
            app:layout_constraintTop_toTopOf="@+id/tv_item_genero" />

        <TextView
            android:id="@+id/tv_item_nombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/lorem_sh"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/tv_item_notas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/lorem_sh"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView20"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <TextView
            android:id="@+id/tv_item_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_sh"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/title_fecha"
            app:layout_constraintStart_toStartOf="@+id/textView18"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/tv_item_genero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/lorem_sh"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_edad"
            app:layout_constraintStart_toEndOf="@+id/tv_item_edad"
            app:layout_constraintTop_toTopOf="@+id/tv_item_edad" />



        <TextView
            android:id="@+id/tv_item_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_sh"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView20"
            app:layout_constraintStart_toStartOf="@+id/title_fecha"
            app:layout_constraintTop_toBottomOf="@+id/title_fecha" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_nombre"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_nombre"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/item_edad"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_edad"
            app:layout_constraintStart_toStartOf="@+id/tv_item_nombre"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_nombre" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_genero"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/textView18"
            app:layout_constraintStart_toStartOf="@+id/tv_item_genero"
            app:layout_constraintTop_toTopOf="@+id/textView18"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_id"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="@+id/tv_item_id"
            app:layout_constraintTop_toTopOf="@+id/textView16"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/title_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_fecha"
            app:layout_constraintStart_toStartOf="@+id/tv_item_edad"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_edad"
            tools:text="@string/item_fecha" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/item_notas"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_notas"
            app:layout_constraintStart_toStartOf="@+id/tv_item_fecha"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_fecha" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/item_cita_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>